<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@android:drawable/screen_background_light_transparent"
        android:id="@+id/layout_utama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resto_s_cashier"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/second"
            android:paddingBottom="15dp" />

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_customer"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="14sp"
                android:maxLength="100"
                android:autofillHints="name"
                tools:ignore="LabelFor" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_makan"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/makanan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/group_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btn_chicken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chicken_rice"/>

            <RadioButton
                android:id="@+id/btn_burger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beef_burger"/>
            <RadioButton
                android:id="@+id/btn_fries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regular_fries"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txt_jma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/edit_jma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="number"
                android:text=""
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_minum"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_minuman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minuman"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/group_minuman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/btn_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ice_cream_cone"/>

                <RadioButton
                    android:id="@+id/btn_oreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flurry_oreo"/>

                <RadioButton
                    android:id="@+id/btn_fanta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fanta_float"/>
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_jmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:id="@+id/edit_jmi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text=""
                    android:textSize="14sp"
                    android:autofillHints=""
                    tools:ignore="LabelFor"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_order"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:backgroundTint="@color/second"/>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/txt_hmi"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/harga"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:paddingTop="10dp"-->
<!--                android:paddingBottom="10dp"/>-->

<!--            <EditText-->
<!--                android:id="@+id/edit_hmi"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:autofillHints=""-->
<!--                android:inputType="number"-->
<!--                android:text=""-->
<!--                android:textSize="14sp"-->
<!--                tools:ignore="LabelFor" />-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/txt_hma"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/harga"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                android:paddingTop="10dp"-->
<!--                android:paddingBottom="10dp"/>-->

<!--            <EditText-->
<!--                android:id="@+id/edit_hma"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:autofillHints=""-->
<!--                android:inputType="number"-->
<!--                android:text=""-->
<!--                android:textSize="14sp"-->
<!--                tools:ignore="LabelFor" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_subtot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edit_subtot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/black"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_pajak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pajak"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_pajak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/black"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_bayar"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edit_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/black"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_tunai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunai"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edit_tunai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/black"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_bayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bayar"
            android:backgroundTint="@color/second"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/txt_ket"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/keterangan"
               android:textSize="16sp"
               android:textColor="@color/black"
               android:textStyle="bold"/>
           <EditText
               android:id="@+id/edit_ket"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="text"
               android:text=""
               android:textSize="14sp"
               android:textColor="@color/black"
               android:autofillHints=""
               tools:ignore="LabelFor" />

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_Kembalian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kembalian"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_kembalian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/black"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_bayar"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:backgroundTint="@color/second"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_cetak"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cetak_struk"
                android:backgroundTint="@color/second"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>